fix: update title font size to improve visibility

--- a/packages/web-app/src/screens/landing/styles.css
+++ b/packages/web-app/src/screens/landing/styles.css
@@ -6,7 +6,7 @@
     }
 
     .title {
-        @apply text-4xl  font-bold text-center mb-4;
+        @apply text-5xl  font-bold text-center mb-4;
 
         span {
             @apply text-gray-900;
